--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "scribles",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -22,7 +23,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "publish": "gh-pages -d dist"
+    "publish": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
