--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "@types/react-modal": "^3.13.1",
-    "kaitai-struct": "^0.10.0",
+    "abr-js": "^0.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
@@ -74,6 +74,7 @@
     "stylelint-config-standard": "^21.0.0",
     "stylelint-csstree-validator": "^1.9.0",
     "stylelint-scss": "^3.21.0",
+    "tailwindcss": "^3.3.5",
     "web-vitals": "^3.1.0"
   }
 }
